--- a/MyLive/Base.lproj/Main.storyboard
+++ b/MyLive/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" restorationIdentifier="MainVIew" translatesAutoresizingMaskIntoConstraints="NO" id="Kh1-PP-qaS" userLabel="MyView" customClass="GLHKView" customModule="MyLive" customModuleProvider="target">
+                            <view contentMode="scaleToFill" misplaced="YES" restorationIdentifier="MainVIew" translatesAutoresizingMaskIntoConstraints="NO" id="Kh1-PP-qaS" userLabel="MyView" customClass="MTHKView" customModule="HaishinKit">
                                 <rect key="frame" x="0.0" y="0.0" width="647" height="375"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pYo-Dd-lQJ" userLabel="btn Settings" customClass="RoundRectButton" customModule="MyLive" customModuleProvider="target">
@@ -71,19 +69,6 @@
                                             <action selector="onBpsChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="MuQ-Di-S7k"/>
                                         </connections>
                                     </segmentedControl>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nzy-3z-QgA" userLabel="seg Zoom" customClass="MySegmentedControl" customModule="MyLive" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="223" width="119" height="29"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <segments>
-                                            <segment title="x1"/>
-                                            <segment title="x2"/>
-                                            <segment title="x3"/>
-                                            <segment title="x4"/>
-                                        </segments>
-                                        <connections>
-                                            <action selector="onZoomChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="bJS-p5-yo6"/>
-                                        </connections>
-                                    </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JP2-Tc-mbZ" userLabel="btn Option" customClass="RoundRectButton" customModule="MyLive" customModuleProvider="target">
                                         <rect key="frame" x="42" y="280" width="35" height="31"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -100,14 +85,6 @@
                                             <action selector="audioTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hZZ-iL-Idb"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOY-Kb-tFl" customClass="RoundRectButton" customModule="MyLive" customModuleProvider="target">
-                                        <rect key="frame" x="147" y="269" width="52" height="49"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="Face"/>
-                                        <connections>
-                                            <action selector="faceTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IFu-VP-gzb"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJU-f0-7oi" userLabel="Btin RotLock" customClass="RoundRectButton" customModule="MyLive" customModuleProvider="target">
                                         <rect key="frame" x="224" y="268" width="52" height="49"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -116,10 +93,24 @@
                                             <action selector="rotlockTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hW7-XZ-z54"/>
                                         </connections>
                                     </button>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nzy-3z-QgA" userLabel="seg Zoom" customClass="MySegmentedControl" customModule="MyLive" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="190" width="119" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <segments>
+                                            <segment title="x1"/>
+                                            <segment title="x2"/>
+                                            <segment title="x3"/>
+                                            <segment title="x4"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="onZoomChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="bJS-p5-yo6"/>
+                                        </connections>
+                                    </segmentedControl>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Kh1-PP-qaS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="4eA-Qv-qsS"/>
@@ -127,12 +118,10 @@
                             <constraint firstItem="Kh1-PP-qaS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="oR1-Ce-lux"/>
                             <constraint firstItem="Kh1-PP-qaS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wGc-YK-W6b"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Z8A-Fv-Owu"/>
                     <connections>
                         <outlet property="btnAudio" destination="A0O-3U-6ol" id="cMd-e1-Brv"/>
-                        <outlet property="btnFace" destination="aOY-Kb-tFl" id="1A8-Lh-LvM"/>
                         <outlet property="btnOption" destination="JP2-Tc-mbZ" id="1kU-Fn-KaE"/>
                         <outlet property="btnPublish" destination="t4N-Px-d2w" id="84S-6I-Mtc"/>
                         <outlet property="btnRotLock" destination="HJU-f0-7oi" id="ERe-R4-NH1"/>
@@ -155,8 +144,8 @@
                     <view key="view" contentMode="scaleToFill" id="UGI-n5-nKt" customClass="FormViewController">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vZH-Wl-GJg"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jNL-LU-YF6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -166,7 +155,6 @@
     </scenes>
     <resources>
         <image name="Audio" width="80" height="80"/>
-        <image name="Face" width="80" height="80"/>
         <image name="Loop" width="85.333335876464844" height="85.333335876464844"/>
         <image name="Option" width="85.333335876464844" height="85.333335876464844"/>
         <image name="RotLock" width="85.333335876464844" height="85.333335876464844"/>
